SERVER-22390 special case InterruptedAtShutdown in waiting for replication inside RangeDeleter to avoid crash